# rapid

./: .gitignore  .npmrc  .prettierignore  .prettierrc.json  LICENSE.MD  README.MD  cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js
.github/workflows/: deploy-landing.yaml  deploy-storybook.yaml  deploy-ui-landing.yaml  release-cargo.yaml  release-npm.yaml  release-rapid-cli.yaml  release-rapid-codegen.yaml  release-rapid-react.yaml  release-rapid-ui.yaml  release-rapid-web.yaml  release-ui-landing.yaml  test-node.yaml
crates/rapid-cli/: Cargo.toml  README.MD  README.md
crates/rapid-cli/src/: args.rs  cli.rs  constants.rs  lib.rs  main.rs  tui.rs  util.rs  utils.rs
crates/rapid-cli/src/commands/: build.rs  init.rs  mod.rs  new.rs  routes.rs  run.rs  templates.rs
crates/rapid-cli/src/rapid_config/: config.rs
crates/rapid-cli/src/templates/dockerfiles/: rapidServer.Dockerfile
crates/rapid-cli/src/templates/fullstack/: README.MD
crates/rapid-cli/src/templates/fullstack/remix/: Cargo.toml  README.md  package.json  remix.config.js
crates/rapid-cli/src/templates/fullstack/remix/app/: root.tsx
crates/rapid-cli/src/templates/fullstack/remix/app/routes/: _index.tsx
crates/rapid-cli/src/templates/rapidUI/remix/: tailwind.config.js
crates/rapid-cli/src/templates/server/: Cargo.toml  Cargo__toml  README.MD  rapid.toml
crates/rapid-cli/src/templates/server/src/: main.rs
crates/rapid-cli/src/templates/server/src/routes/: index.rs
crates/rapid-cli/templates/dockerfiles/: rapidServer.Dockerfile
crates/rapid-cli/templates/nextjs/: .gitignore  Cargo__toml  package.json  rapid.toml  tailwind.config.ts
crates/rapid-cli/templates/nextjs/pages/: _document.tsx  index.tsx
crates/rapid-cli/templates/rapidUI/nextjs/: tailwind.config.ts
crates/rapid-cli/templates/rapidUI/reactVite/: postcss.config.js  tailwind.config.js
crates/rapid-cli/templates/rapidUI/remix/: tailwind.config.ts
crates/rapid-cli/templates/remix/: .env.example  .gitignore  Cargo__toml  README.md  package.json  rapid.toml  remix.config.js
crates/rapid-cli/templates/remix-without-clerk/: Cargo__toml  package.json  server.ts  tailwind.config.ts
crates/rapid-cli/templates/remix-without-clerk/app/: root.tsx
crates/rapid-cli/templates/remix-without-clerk/app/api/: bindings.ts
crates/rapid-cli/templates/remix-without-clerk/app/routes/: _index.tsx
crates/rapid-cli/templates/remix/app/: root.tsx
crates/rapid-cli/templates/remix/app/api/: bindings.ts  root.rs
crates/rapid-cli/templates/remix/app/api/routes/: hello.rs  mod.rs
crates/rapid-cli/templates/remix/app/routes/: _index.tsx  sign-in.$.tsx  sign-up.$.tsx
crates/rapid-cli/templates/server/src/: main.rs
crates/rapid-cli/templates/server/src/routes/: index.rs
crates/rapid-ssr/: Cargo.toml  README.md
crates/rapid-ssr/src/: lib.rs  v8.rs
crates/rapid-ssr/src/polyfills/: mod.rs  text_encoder.rs
crates/rapid-web/: Cargo.toml  README.MD  README.md  rapid.toml
crates/rapid-web-codegen/: Cargo.toml  README.md
crates/rapid-web-codegen/src/: lib.rs  utils.rs
crates/rapid-web/examples/: rapid_server.rs
crates/rapid-web/examples/server/: rapid.toml
crates/rapid-web/examples/server/src/: main.rs
crates/rapid-web/src/: config.rs  lib.rs  logger.rs  server.rs  tui.rs  types.rs  util.rs
crates/rapid-web/src/default_routes/: mod.rs  static_files.rs  templates.rs
crates/rapid-web/src/shift/: convert.rs  generate.rs  mod.rs  util.rs
crates/rapid-web/src/shift/complex_conversions/: convert_structs.rs  mod.rs
crates/rapid-web/tests/mocks/files/: _middleware.rs  hello.rs  index.rs  mutation.rs
docs/: dev.md  docs.md
docs/landing/: .dockerignore  Dockerfile  fly.toml  package.json  remix.config.js  tailwind.config.ts
docs/landing/app/: entry.server.tsx  helpers.ts  root.tsx
docs/landing/app/components/: BreadCrumb.tsx  CodeBlock.tsx  CratesIoLogo.tsx  DocsLinks.tsx  DocsNavigation.tsx  DocsSidebar.tsx  Layout.tsx  Navigation.tsx  NextDoc.tsx  NpmLogo.tsx  RapidLink.tsx
docs/landing/app/routes/: _index.tsx  docs.configuration.doc.mdx  docs.configuration.tsx  docs.demo-app.tsx  docs.installation.tsx  docs.introduction.doc.mdx  docs.introduction.tsx  docs.middleware.doc.mdx  docs.middleware.tsx  docs.quickstart.doc.mdx  docs.quickstart.tsx  docs.route-handlers.doc.mdx  docs.route-handlers.tsx  docs.tsx  docs.type-safety.doc.mdx  docs.type-safety.tsx
docs/landing/app/styles/: index.css  introduction.css  markdown.css  prism.css
docs/landing/assets/: rapid-bolt.blend
docs/rapid-ui/: docs.md  gettingStarted.md
docs/rapid-ui/components/disclosures/: accordian.md
docs/rapid-ui/components/feedback/: skeleton.md  skeletonText.md  spinner.md
docs/rapid-ui/components/forms/: switch.md
docs/rapid-ui/components/layout/: container.md  divider.md  flex.md  stack.md
docs/rapid-ui/components/overlay/: drawer.md  menu.md  modal.md  tooltip.md
docs/rapid-ui/components/primitives/: button.md  heading.md  input.md  select.md  text-area.md  text.md
docs/rapid-web/: docs.md  gettingStarted.md
docs/ui-landing/: .dockerignore  Dockerfile  README.md  package.json  remix.config.js  tailwind.config.ts
docs/ui-landing/app/: root.tsx
docs/ui-landing/app/components/: NpmInstall.tsx
docs/ui-landing/app/routes/: _index.tsx
docs/ui-landing/app/styles/: index.css  index.css.map  index.scss
examples/: README.MD
examples/fullstack/: Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
examples/fullstack/app/: entry.server.tsx
examples/fullstack/app/api/: root.rs
examples/fullstack/app/routes/: sign-in.$.tsx
examples/fullstack/src/: App.tsx
examples/fullstackExperimental/: README.MD  package.json
examples/fullstackNextjs/: Cargo.toml  package.json
examples/fullstackNextjs/pages/: index.tsx
examples/fullstackRemix/: Cargo.toml
examples/fullstackRemix/app/: entry.client.tsx  root.tsx
examples/server/: Cargo.toml
examples/ui/: package.json  tailwind.config.cjs  tailwind.config.js  test.ts
examples/ui/src/: App.tsx
test/: test.md
(+8 files in other folders)
