[package]
name = "rapid-cli"
version = "0.0.7"
edition = "2021"
description = "The CLI tool for the Rapid framework"
repository = "https://github.com/DarrenBaldwin07/rapid"
homepage = "https://cincinnati.ventures"
license = "MIT"
keywords = ["CLI", "web-framework", "rapid"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive", "cargo"] }
colorful = "0.2.2"
rust-embed = "6.4.2"
serde = "1.0.152"
terminal-emoji = "0.4.1"
tiny-gradient = "0.1.0"
toml = "0.7.2"
tui = "0.19.0"
