[package]
name = "rapid-cli"
version = "0.0.8"
edition = "2021"
description = "The CLI tool for the Rapid framework"
repository = "https://github.com/DarrenBaldwin07/rapid"
homepage = "https://cincinnati.ventures"
license = "MIT"
keywords = ["CLI", "web-framework", "rapid"]

[lib]
name = "rapid_cli"
path = "src/lib.rs"

[[bin]]
name = "rapid"
path = "src/bin/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive", "cargo"] }
colorful = "0.2.2"
rust-embed = "6.4.2"
serde = { version = "1.0", features = ["derive"] }
terminal-emoji = "0.4.1"
tiny-gradient = "0.1.0"
toml = "0.7.2"
tui = "0.19.0"
