[package]
name = "rapid-cli"
version = "0.5.2"
edition = "2021"
about = "The CLI tool for the Rapid framework"
description = "The CLI tool for the Rapid framework"
repository = "https://github.com/DarrenBaldwin07/rapid"
homepage = "https://cincinnati.ventures"
license = "MIT"
keywords = ["CLI", "web-framework", "rapid"]

[lib]
name = "rapid_cli"
path = "src/lib.rs"

[[bin]]
name = "rapid"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive", "cargo"] }
colorful = "0.2.2"
ctrlc = "3.2.5"
include_dir = "0.7.3"
requestty = "0.5.0"
rust-embed = "6.4.2"
serde = { version = "1.0", features = ["derive"] }
spinach = "2.1.0"
strum = "0.24.1"
strum_macros = "0.24.3"
terminal-emoji = "0.4.1"
tiny-gradient = "0.1.0"
toml = "0.7.2"
tui = "0.19.0"
walkdir = "2.3.3"
