[package]
name = "rapid-web-codegen"
version = "0.2.0"
edition = "2021"
description = "Codegen utilities for the rapid framework."
repository = "https://github.com/DarrenBaldwin07/rapid"
homepage = "https://cincinnati.ventures"
license = "MIT"
keywords = ["server", "web-framework", "rapid"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.26"
proc-macro2 = "1.0.49"
include_dir = "0.7.3"
regex = "1.7.3"
rapid-cli = { version = "0.2.9", path = "../rapid-cli" }
syn = "2.0.11"
